--- a/index.html
+++ b/index.html
@@ -12,20 +12,20 @@
 		<!-- Header -->
 			<div id="header">
 
-				<h1>Med-Mobile<br> Data Solutions</h1>
-				<br>
-				<p>A medical-technology company focusing on using data to improve healthcare.</p>
+				<h1>Med-Mobile <br> Data Solutions</h1>
+				<img class="headerimg" src="./images/CompanyLogo.png" alt=""></img>
+				<p>Improving Global Healthcare With Data</p>
 			</div>
 
 		<!-- Main -->
 			<div id="main">
 
 				<header class="major container medium">
-					<h2>We are currently redesinging
+					<h2>We are currently revolutionizing
 					<br />
-					ambulance-hospital
+					communication between ambulances
 					<br />
-					communication in India.</h2>
+					and hospitals in India.</h2>
 					<!--
 					<p>Tellus erat mauris ipsum fermentum<br />
 					etiam vivamus nunc nibh morbi.</p>
