Changed content sections to be more descriptive and revised icon and
icon links

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 		<!-- Header -->
 			<div id="header">
 
-				<h1>Med-Mobile <br> Data Solutions</h1>
+				<h1>Mobile-Med <br> Data Solutions</h1>
 				<img class="headerimg" src="./images/CompanyLogo.png" alt=""></img>
 				<p>Improving Global Healthcare With Data</p>
 			</div>
@@ -34,24 +34,24 @@
 
 				<div class="box alt container">
 					<section class="feature left">
-						<a href="#" class="image icon fa-signal"><img src="images/pic01.jpg" alt="" /></a>
+						<a href="https://www.sciencedirect.com/science/article/pii/S1072751509014902?via%3Dihub" target="_blank" class="image icon fa-ambulance"><img src="images/pic01.jpg" alt="" /></a>
 						<div class="content">
-							<h3>The First Thing</h3>
-							<p>Vitae natoque dictum etiam semper magnis enim feugiat amet curabitur tempor orci penatibus. Tellus erat mauris ipsum fermentum etiam vivamus eget. Nunc nibh morbi quis fusce lacus.</p>
+							<h3>Problem Statement</h3>
+							<p>Currently there is almost no communiction between ambulances and hospitals before they arrive with a patient. This causes dead time and inaccuracy leading to fatal results.</p>
 						</div>
 					</section>
 					<section class="feature right">
-						<a href="#" class="image icon fa-id-card-o"><img src="images/pic02.jpg" alt="" /></a>
+						<a href="http://health.ri.gov/publications/userguide/PatientTrackingSystem.pdf" target="_blank" class="image icon fa-mobile"><img src="images/pic02.jpg" alt="" /></a>
 						<div class="content">
-							<h3>The Second Thing</h3>
-							<p>Vitae natoque dictum etiam semper magnis enim feugiat amet curabitur tempor orci penatibus. Tellus erat mauris ipsum fermentum etiam vivamus eget. Nunc nibh morbi quis fusce lacus.</p>
+							<h3>Our solution</h3>
+							<p>We are currently designing a communication system that collects patient data and transfers it to hospitals modeled after a Patient Tracking System design. Our system is built to require zero additional infrastructure and enables secure and efficent data transfer.</p>
 						</div>
 					</section>
 					<section class="feature left">
-						<a href="#" class="image icon fa-mobile"><img src="images/pic03.jpg" alt="" /></a>
+						<a href="#" onclick="window.open('http://simhapurihospitals.com/'); window.open('https://www.practo.com/chennai/clinic/shanthi-hospital-neelankarai');" class="image icon fa-globe"><img src="images/pic03.jpg" alt="" /></a>
 						<div class="content">
-							<h3>The Third Thing</h3>
-							<p>Vitae natoque dictum etiam semper magnis enim feugiat amet curabitur tempor orci penatibus. Tellus erat mauris ipsum fermentum etiam vivamus eget. Nunc nibh morbi quis fusce lacus.</p>
+							<h3>Future work</h3>
+							<p>We are currently working with two hospitals to implement and refine the system. We plan on using this data to launch an NLP focused analytics platform to facilitate a data based healthcare model.</p>
 						</div>
 					</section>
 				</div>
