--- a/index.html
+++ b/index.html
@@ -239,7 +239,7 @@
 					</ul>
 
 					<ul class="copyright">
-						<li>&copy; Mobile-Med Data Solutions. All rights reserved.</li><li>Design: Mayank Mishra</a></li>
+						<li>&copy; Mobile-Med Data Solutions 2018. All rights reserved.</li><li>Design: Mayank Mishra</a></li>
 					</ul>
 
 				</div>
