changed product button to input element

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
 					<br />
 					and hospitals in India.</h2>
 					<br>
-					<a href="https://mobilemed.co.in"><button>Our Product</button></a> 
+					<a href="http://mobilemed.co.in"><input type="submit" value="Our Product" /></a>
 					<!--
 					<p>Tellus erat mauris ipsum fermentum<br />
 					etiam vivamus nunc nibh morbi.</p>
